--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -92,20 +92,25 @@
 <!--&lt;!&ndash;                 <li><a href="#" class="text-white rounded">Справочник индикаторов</a></li>&ndash;&gt;-->
 <!--             </ul>-->
 <!--         {% endif %}-->
+      {% endif %}
 
       <li>
           {% if active == "programs" %}
-            <a href="{{ url_for('programs.dates_update') }}" class='nav-link active text-white rounded collapsed' aria-current="page">
+            <a href="{{ url_for('programs.dept_check') }}" class='nav-link active text-white rounded collapsed' aria-current="page">
           {% else %}
-            <a href="{{ url_for('programs.dates_update') }}" class="nav-link text-secondary rounded collapsed" aria-current="page">
+            <a href="{{ url_for('programs.dept_check') }}" class="nav-link text-secondary rounded collapsed" aria-current="page">
           {% endif %}
           <svg class="bi me-2" width="16" height="16"><use xlink:href="#programs"/></svg>
           Программы</a>
       </li>
+         {% if current_user.is_authenticated %}
          {% if active == "programs" %}
              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                 <li><a href="{{ url_for('programs.dept_check') }}" class="text-white rounded">Проверка по кафедре</a></li>
+
                  <li><a href="{{ url_for('programs.dates_update') }}" class="text-white rounded">Обновление дат</a></li>
                  <li><a href="{{ url_for('programs.choose_plan') }}" class="text-white rounded">Значения полей</a></li>
+                 {% endif %}
              </ul>
          {% endif %}
 
@@ -119,7 +124,7 @@
 <!--          Библиотека</a>-->
 <!--        </li>-->
 
-      {% endif %}
+
 
     </ul>
 
