--- a/app/templates/plans/indicator_file.html
+++ b/app/templates/plans/indicator_file.html
@@ -17,16 +17,18 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-md-10 col-xl-8">
-        {% if file_errors %}
-          <div class="alert alert-danger text-center py-1 mb-3" role="alert" style="opacity: 0.80;">
-            <h6 class="alert-heading fw-bold text-center">Индикаторы файла, которые не удалось прочитать (необходимо исправить):</h6>
-            <span>{{ '\n'.join(file_errors) }}</span>
+        {% if indicator_errors %}
+          <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+            <h6 class="alert-heading fw-bold text-center">Индикаторы файла, которые не удалось обработать:<br> (неверный код или отсутствует соответствующая компетенция в плане)</h6>
+            {% for indicator in indicator_errors %}
+              <span>{{ indicator }}<br></span>
+            {% endfor %}
           </div>
         {% else %}
-          {% if message %}
+          {% if report_data %}
             <div class="alert alert-success text-center py-1 mb-3" role="alert" style="opacity: 0.80;">
               <h6 class="alert-heading fw-bold text-center">Загруженный файл:<br>{{ filename }}</h6>
-              <span>{{ message }}</span>
+              <span>Количество учебных дисциплин - {{ report_data|length }}</span>
             </div>
             {{ form.generate_report(class="btn btn-success link-light mt-2", style="background: #008751;width: 100%;font-weight: bold;border-style: none;") }}
           {% endif %}
